--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -15,16 +15,16 @@
                         <a href="{% url 'comment_list' %}" class="header__link">Главная</a>
                     </li>
                     <li>
-                        <a class="header__link">Вторая</a>
+                        <a href="{% url 'fish' %}" class="header__link">Вторая</a>
                     </li>
                     <li>
-                        <a class="header__link">Третья</a>
+                        <a href="{% url 'fish' %}" class="header__link">Третья</a>
                     </li>
                     <li>
-                        <a class="header__link">Четвертая</a>
+                        <a href="{% url 'fish' %}" class="header__link">Четвертая</a>
                     </li>
                     <li>
-                        <a href="/" class="header__link">Пятая</a>
+                        <a href="{% url 'fish' %}" href="/" class="header__link">Пятая</a>
                     </li>
                     <li>
 
