--- a/MyApp/static/MyApp/css/new.css
+++ b/MyApp/static/MyApp/css/new.css
@@ -528,18 +528,40 @@ nav ul li a:hover {
   padding: 8px 8px 8px 10px;
   width: 80%;
 }
-/*--------------------/COMMENTS--------------------------*/
+/*--------------------PAGINATION------------------------*/
+
+.pagination {
+  flex-direction:column;
+  width: 90%;
+  margin: 20px 0 10px 20px;
+}
+.title__pagination {
+  text-align: center;
+  height: 30px;
+  font-size: 20px;
+}
+.body__pagination {
+  text-align: center;
+  font-size: 15px;
+}
+.step-links img {
+  width: 20px;
+}
 
 /*------------------- FOOTER--------------------------- */
+.spacer{
+  height: 220px;
+}
 .footer {
   background-color: #4c394f;
   color: #d3d3d3;
-  height: 300px;
+  height: 200px;
   position: relative;
+  margin-top: -220px;
 }
 
 .footer .footer-content {
-  height: 250px;
+  height: 150px;
 }
 
 .footer .footer-bottom {
