--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,12 @@
 
             {% block content %} {% endblock content %}
 
-            {% include 'include/footer.html' %}
-
+        <div class="spacer"></div>
         </div>
+
+        {% include 'include/footer.html' %}
+
+
     </body>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="{% static 'MyApp/js/script.js' %}"></script>
