--- a/templates/MyApp/comments_list.html
+++ b/templates/MyApp/comments_list.html
@@ -99,39 +99,16 @@
                     <div class="button__column">
                         <div class="button-wrapper__column">
                             <div class="buttton__but3">
-                                <a href="#" class="btn btn1">Анимация</a>
+                                <a type='button' id=animbutton class="btn btn1">Анимация</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="img__column wow fadeInRightBig" data-wow-offset="400">
+                <div id='anim' class="img__column wow fadeInRightBig" data-wow-offset="400">
                     <img src="{% static 'MyApp/img/smoke.png' %}">
                 </div>
             </div>
-            <div class="row__content row">
-                <div class="img__column wow fadeInLeftBig" data-wow-offset="400">
-                    <img src="{% static 'MyApp/img/smoke.png' %}">
-                </div>
-                <div class="smoke__row column">
-                    <div class="title__column title">
-                        Добавим немного контента
-                    </div>
-                    <div class="subtitle__column subtitle">
-                        Я стараюсь держать себя в руках и не вставлять свистелки и перделки в количествах, превосходящих здравый смысл
-                    </div>
-                    <div class="content__column">
-                        Справа должен был выехать красный дым к тому моменту как вы доберетесь до этих строк, чтож надеюсь он там...
-                    </div>
-                    <div class="button__column">
-                        <div class="button-wrapper__column">
-                            <div class="buttton__but3">
-                                <a href="#" class="btn btn1">Анимация</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            
 <!-------------------------Comment FORM---------------------->
 
             <div class="comment-form">
