--- a/templates/MyApp/comments_list.html
+++ b/templates/MyApp/comments_list.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="button-wrapper__but3">
                         <div class="buttton__but3">
-                            <a href="#" class="btn btn1">Ссылки</a>
+                            <a href="{% url 'links' %}" class="btn btn1">Ссылки</a>
                         </div>
                     </div>
                 </div>
