--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -40,7 +40,7 @@
   
 
     <div class="social">
-        <div class="title__social">Войти с помощью:</div>
+        <div class="body__social">Войти с помощью:</div>
             <div class="body__social">
                 <a href="{% provider_login_url 'vk' method='oauth2' %}">
                     <img class="vk_logo" src="{% static 'MyApp/img/ikons/vk.png' %}" alt="">
