--- a/MyApp/static/MyApp/css/new.css
+++ b/MyApp/static/MyApp/css/new.css
@@ -131,7 +131,7 @@ html, body {
   height: 100%;
   background-color: #4c394f;
   z-index: 2;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .header__body {
@@ -422,6 +422,7 @@ nav ul li a:hover {
   border: #ccc 1px solid;
   resize: none;
   padding: 8px 8px 8px 10px;
+  font-size: 16px;
 }
 .form-text textarea:focus {
   background-color: lightblue;
@@ -525,6 +526,7 @@ nav ul li a:hover {
 }
 
 .text__message{
+  font-size: 15px;
   padding: 8px 8px 8px 10px;
   width: 80%;
 }
