--- a/templates/MyApp/fishpage.html
+++ b/templates/MyApp/fishpage.html
@@ -13,7 +13,7 @@
 <!-------------------------Title Greeting-------------------->
 
             <div class="greeting__row row">
-                <div class="title__row title">
+                <div class="title__linkrow title">
 
                 </div>
                 <div class="subtitle__row subtitle">
