--- a/templates/MyApp/links_list.html
+++ b/templates/MyApp/links_list.html
@@ -12,10 +12,10 @@
 
 <!-------------------------Title Greeting-------------------->
 
-            <div class="greeting__row row">
+            <div class="greeting__linkrow row">
                 {% for theme in themes %}
-                <div class="title__row">{{ theme.theme }}</div>
-                <div class="body__row">
+                <div class="title__linkrow">{{ theme.theme }}</div>
+                <div class="body__linkrow">
 
                     <table>
                         <tr>
