--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, shrink-to-fit=no">
 		<link rel="stylesheet" type="text/css" href="{% static 'MyApp/css/new.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'MyApp/css/libs/animate.css' %}">
+        <link rel="shortcut icon" type="image/png" href="{% static 'MyApp/img/ikons/tree.png' %}"/>
 		<title>{% block title %} {% endblock title %}</title>
         {% recaptcha_init %}
         {% recaptcha_ready action_name='homepage' %}
