--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -15,7 +15,7 @@
                         <a href="{% url 'comment_list' %}" class="header__link">Главная</a>
                     </li>
                     <li>
-                        <a href="{% url 'fish' %}" class="header__link">Вторая</a>
+                        <a href="{% url 'links_list' %}" class="header__link">Ссылочная</a>
                     </li>
                     <li>
                         <a href="{% url 'fish' %}" class="header__link">Третья</a>
