fix grammar mistakes

--- a/templates/MyApp/comments_list.html
+++ b/templates/MyApp/comments_list.html
@@ -14,7 +14,7 @@
 
             <div class="greeting__row row">
                 <div class="title__row">
-                    Привет! Это тестовая поляна для эксперементов
+                    Привет! Это тестовая поляна для экспериментов
                 </div>
                 <div class="subtitle__row">
                     На этом сайте я планирую размещать полезные ссылки для веб-разработки, а так же отрабатывать на практике навыки разработки интернет-ресурсов
@@ -59,7 +59,7 @@
 
                     </div>
                     <div class="button-wrapper__but3">
-                        <a href="{% url 'fish' %}" class="btn btn1">
+                        <a href="{% url 'js' %}" class="btn btn1">
                             <div class="buttton__but3">
                                 Доска
                             </div>
